[ fusion ] tests