@@ -4,5 +4,4 @@ start "Eureka" %JAVA_17_HOME%/bin/java -Xmx256m ^
 	-Dlogging.config=log4j2.xml ^
 	-Dlog4j.shutdownHookEnabled=false ^
 	-Dserver.port=7777 ^
-	--add-opens=java.base/sun.nio.ch=ALL-UNNAMED ^
 	-jar service.jar
